repoze.who Changelog
====================

After 1.0.18 (unreleased)
-------------------------

- In ``repoze.who.restrict``, return headers as a list, to keep ``wsgiref``
  from complaining.

- Fixed example call to ``repoze.who.config:make_middleware_with_config``
  (added missing ``global_config`` argument).  See
  http://bugs.repoze.org/issue114

1.0.18 (2009-11-05)
-------------------

- Issue #104:  AuthTkt plugin was passing an invalid cookie value in
  headers from ``forget``, and was not setting the ``Max-Age`` and 
  ``Expires`` attributes of those cookies.

1.0.17 (2009-11-05)
-------------------

- Fixed the ``repoze.who.plugins.form.make_plugin`` factory's ``formcallable``
  argument handling, to allow passing in a dotted name (e.g., from a config
  file).

1.0.16 (2009-11-04)
-------------------

- Exposed ``formcallable`` argument for ``repoze.who.plugins.form.FormPlugin``
  to the callers of the ``repoze.who.plugins.form.make_plugin`` factory.
  Thanks to Roland Hedburg for the report.

- Fixed an issue that caused the following symptom when using the
  ini configuration parser::

   TypeError: _makePlugin() got multiple values for keyword argument 'name'

  See http://bugs.repoze.org/issue92 for more details.  Thanks to vaab
  for the bug report and initial fix.


1.0.15 (2009-06-25)
-------------------

- If the form post value ``max_age`` exists while in the ``identify``
  method is handling the ``login_handler_path``, pass the max_age
  value in the returned identity dictionary as ``max_age``.  See the
  below bullet point for why.

- If the ``identity`` dict passed to the ``auth_tkt`` ``remember``
  method contains a ``max_age`` key with a string (or integer) value,
  treat it as a cue to set the ``Max-Age`` and ``Expires`` headers in
  the returned cookies.  The cookie ``Max-Age`` is set to the value
  and the ``Expires`` is computed from the current time.


1.0.14 (2009-06-17)
-------------------
